modify mail theme

--- a/app/views/prep_mailer/apply.html.erb
+++ b/app/views/prep_mailer/apply.html.erb
@@ -1,8 +1,8 @@
-<div align="center">
-  <h2> <%= @user.fullname %> applied for your prep </h2>
+<div style="width: 700px;">
+  <h2 style="color: #3498db"> <%= @user.fullname %> applied for your prep </h2>
   <hr>
-  <p><%= @prep.description %></p>
   <p><%= link_to @prep.title, '#' %></p>
+  <p><%= @prep.description %></p>
   <hr>
   <p>sleekgeekllc.com</p>
   <p>Contacts: </p>
