--- a/app/views/prep_mailer/confirmed.html.erb
+++ b/app/views/prep_mailer/confirmed.html.erb
@@ -1,5 +1,5 @@
-<div align="center">
-  <h2> Your prep scheduled is confirmed by <%= @user.fullname %></h2>
+<div style="width: 700px">
+  <h2 style="color: #3498db"> Your prep is confirmed by <%= @user.fullname %></h2>
   <hr>
   <p><%= @prep.description %></p>
   <p><%= link_to @prep.title, '#' %></p>
