modify mailer view

--- a/app/views/prep_mailer/apply.html.erb
+++ b/app/views/prep_mailer/apply.html.erb
@@ -1,7 +1,7 @@
 <div style="width: 700px;">
   <h2 style="color: #3498db"> <%= @user.fullname %> applied for your prep </h2>
   <hr>
-  <p><%= link_to @prep.title, '#' %></p>
+  <h4><%= link_to @prep.title, '#' %></h4>
   <p><%= @prep.description %></p>
   <hr>
   <p>sleekgeekllc.com</p>
