--- a/app/views/prep_mailer/invite.html.erb
+++ b/app/views/prep_mailer/invite.html.erb
@@ -1,8 +1,8 @@
 <div style="width: 700px;">
   <h2 style="color: #3498db"> You are invited for prep by <%= @user.fullname %></h2>
   <hr>
+  <h4><%= link_to @prep.title, '#' %></h4>
   <p><%= @prep.description %></p>
-  <p><%= link_to @prep.title, '#' %></p>
   <hr>
   <p>sleekgeekllc.com</p>
   <p>Contacts: </p>
