remove unnecessary files

--- a/app/views/prep_applications/index.html.erb
+++ b/app/views/prep_applications/index.html.erb
@@ -32,7 +32,7 @@
 									<li> / <%= prepper.profile.address %></li>
 			          </ul>
 			          <%= link_to 'View Full Application', prep_prep_application_path(@prep.id, p.id) %> | 
-								<%= link_to 'Hire', prep_prep_application_path(@prep.id, p.id) %>
+								<%= link_to 'Decline', prep_prep_application_decline_path(@prep.id, p.id) %>
 				      </div>
 		        </div>
 			    </div>
