--- a/app/views/prepper/confirmed.html.erb
+++ b/app/views/prepper/confirmed.html.erb
@@ -4,7 +4,7 @@
 	    <%= render "profile_sidebar" %><!-- :locals => { member: Member.new(), group_id: @group.id } -->
 		</div><!--/span3-->
 		<!-- Search Results -->
-		<div class="span8">
+		<div class="span9">
 			<br>
 			<%= render "layouts/messages" %>
 			<% @preps.each do |p| %>
@@ -12,7 +12,7 @@
 		      <div>
 		        <div class="span3 pull-left booking-img">
   						<%= image_tag p.user.profile.photo.url(:medium) %>
-	            
+
 	            <h5>
 	            	<strong>
 	            		<%= p.user.fullname %>
@@ -43,10 +43,10 @@
 
 		          	<%= link_to 'Decline', prep_prep_application_withdraw_path(p.id, p.prep_applications.find_by_user_id(current_user.id).id), :class => 'color-blue' %>
 		          </p>
-		          <div class="pull-left blog-page blog-item">
-			         	<ul class="unstyled inline blog-tags">
+		          <div>
+			         	<ul class="inline blog-tags">
 			         		<%
-			         			required_skills = p.required_skills.split(',')
+			         			required_skills = p.required_skills.split(',')[0..3]
 			         		%>
 			         		<% required_skills.each do |s| %>
 		            		<li><a href="#"><%= s %></a></li>
