--- a/app/views/preps/_apply_form.html.erb
+++ b/app/views/preps/_apply_form.html.erb
@@ -9,7 +9,7 @@
       <div class="control-group">
         <%= p.label :cover_letter, 'Cover Letter', :class => 'control-label' %>
         <div class="controls">
-          <%= p.text_area :cover_letter, :style => "width: 300px; height: 200px;" %>
+          <%= p.text_area :cover_letter, :style => "width: 300px; height: 200px;", required: true %>
         </div>
       </div>
     </div>
