--- a/app/views/profiles/_add_professional_exp.erb
+++ b/app/views/profiles/_add_professional_exp.erb
@@ -29,7 +29,7 @@
     </div>
     <div class="controls form-inline">
       <%= p.submit "Add", :class => "btn btn-success" %>
-      <a class="btn" data-dismiss="collapse" onclick="$('#add-pro').collapse('hide');">Cancel</a>
+      <a class="btn" data-dismiss="collapse" onclick="$('#add-professional-exp').collapse('hide');">Cancel</a>
     </div>
   <% end %>
 </div>
