--- a/app/views/prepper/confirmed.html.erb
+++ b/app/views/prepper/confirmed.html.erb
@@ -9,9 +9,11 @@
 			<%= render "layouts/messages" %>
 			<% @preps.each do |p| %>
 		    <div class="row-fluid">
-		      <div>
+		      <div class="booking-blocks">
 		        <div class="span3 pull-left booking-img">
-  						<%= image_tag p.user.profile.photo.url(:medium) %>
+		        	<div class="row-fluid">
+  							<%= image_tag p.user.profile.photo.url(:medium) %>
+  						</div>
 
 	            <h5>
 	            	<strong>
