modify users list view/image

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,7 +9,7 @@
           <div class="row-fluid">
             <div class="booking-blocks">
               <div class="span3 pull-left booking-img text-center">
-                <img src="/assets/blank_user.jpg" alt="">
+                <%= image_tag user.profile.photo.url(:medium) %>
                 <ul class="unstyled inline">
                    <li><span class="rating-static rating-45"></span></li>
                    <li><i class="icon-star"></i></li>
