add accordion collapse function in profile page

--- a/app/views/profiles/_edit_education.html.erb
+++ b/app/views/profiles/_edit_education.html.erb
@@ -1,5 +1,5 @@
-<div id="add-education" class="collapse">
-  <%= simple_form_for @education, remote: true, :html => {:method => :post, :class => 'form-horizontal' } do |p| %>
+<div id="education-<%= education.id %>" class="collapse">
+  <%= simple_form_for education, remote: true, :html => {:method => :put, :class => 'form-horizontal' } do |p| %>
     <div class="alert alert-danger hide">
       <span></span>
     </div>
@@ -31,7 +31,7 @@
     </div>
     <div class="controls form-inline">
       <%= p.submit "Add", :class => "btn btn-success" %>
-      <a class="btn" onclick="$('#add-education').collapse('hide');">Cancel</a>
+      <a class="btn" onclick="$('#education-<%= education.id %>').collapse('hide');">Cancel</a>
     </div>
   <% end %>
 </div>
