--- a/app/views/profiles/_edit_overview.html.erb
+++ b/app/views/profiles/_edit_overview.html.erb
@@ -24,7 +24,7 @@
       </div>
       <div class="controls form-inline">
         <%= p.submit "Save", :class => "btn btn-success" %>
-        <a class="btn" data-dismiss="collapse" onclick="$('#profile-overview').collapse('hide');">Cancel</a>
+        <a class="btn" data-dismiss="modal">Cancel</a>
       </div>
     </div>
   <% end %>
