--- a/app/views/profiles/_edit_skills.html.erb
+++ b/app/views/profiles/_edit_skills.html.erb
@@ -1,5 +1,5 @@
-<div id="add-skill" class="collapse">
-  <%= simple_form_for @skill, remote: true, :html => {:method => :post, :class => 'form-horizontal' } do |p| %>
+<div id="skill-<%= skill.id %>" class="collapse">
+  <%= simple_form_for skill, remote: true, :html => {:method => :put, :class => 'form-horizontal' } do |p| %>
     <div class="alert alert-danger hide">
       <span></span>
     </div>
@@ -9,7 +9,7 @@
       <div class="controls">
         <%= p.input_field :name, collection: SkillTag.all, prompt: "Select Skills" %>
         <%= p.submit "Add", :class => "btn btn-success" %>
-        <a class="btn" onclick="$('#add-skill').collapse('hide');">Cancel</a>
+        <a class="btn" data-dismiss="collapse" onclick="$('#add-skill').collapse('hide');">Cancel</a>
       </div>
     </div>
 
