--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -57,7 +57,7 @@
 					<div class="alert alert-info">
 						<span style="font-size:16px;">Skills</span>
 						<span style="font-size:15px;" class="pull-right">
-							<a data-toggle="collapse" data-parent="#profile" href="#add-skill">
+							<a data-toggle="collapse" href="#add-skill">
 								<i class="icon-pencil"></i>&nbsp;Add
 							</a>
 						</span>
@@ -82,7 +82,7 @@
 						<div class="alert alert-info">
 							<span style="font-size:16px;">Professional Experience</span>
 							<span style="font-size:15px;" class="pull-right">
-								<a data-toggle="collapse" data-parent="#profile" href="#add-professional-exp">
+								<a data-toggle="collapse" href="#add-professional-exp">
 									<i class="icon-pencil"></i>&nbsp;Add
 								</a>
 							</span>
@@ -96,7 +96,7 @@
 							<div id="pro_experience<%= p.id %>">
 								<h5>
 									<strong><%= p.title %></strong> | <%= p.company_name %>
-									<a id="edit_link" data-toggle="collapse" data-parent="#profile" href="#professional-exp-<%= p.id%>">
+									<a id="edit_link" data-toggle="collapse" href="#professional-exp-<%= p.id%>">
 										<i class='icon-edit'></i>
 									</a>
 									<%= link_to('<i class="icon-trash"></i>'.html_safe, pro_experience_path(p), :data => { :confirm => "Are you sure?" }, :method => :delete, remote: true) %>
@@ -112,7 +112,7 @@
 							<h5>
 								<span id="title"></span>
 								<span id="action">
-									<a id="edit_link" data-toggle="collapse" data-parent="#profile"><i class='icon-edit'></i></a>
+									<a id="edit_link" data-toggle="collapse"><i class='icon-edit'></i></a>
 
 									<%= link_to('<i class="icon-trash"></i>'.html_safe, '', :data => { :confirm => "Are you sure?" }, :method => :delete, remote: true) %>
 								</span>
@@ -129,7 +129,7 @@
 						<div class="alert alert-info">
 							<span style="font-size:16px;">Education</span>
 							<span style="font-size:15px;" class="pull-right">
-								<a data-toggle="collapse" data-parent="#profile" href="#add-education">
+								<a data-toggle="collapse" href="#add-education">
 									<i class="icon-pencil"></i>&nbsp;Add
 								</a>
 							</span>
@@ -148,6 +148,20 @@
 							<%= "<hr>".html_safe if i < educations.size - 1 %>
 						</div>
 						<% end %>
+						<div id="education_template" style="display: none">
+							<%= render :partial => "edit_professional_exp", :locals => {:education => ProExperience.new} %>
+							<hr>
+							<h5>
+								<span id="title"></span>
+								<span id="action">
+									<a id="edit_link" data-toggle="collapse"><i class='icon-edit'></i></a>
+
+									<%= link_to('<i class="icon-trash"></i>'.html_safe, '', :data => { :confirm => "Are you sure?" }, :method => :delete, remote: true) %>
+								</span>
+							</h5>
+							<p id="term"></p>
+							<p id="description"></p>
+						</div>
 					</div>
 				</div><!--/row-fluid-->
 				<br>
@@ -157,8 +171,8 @@
 						<div class="alert alert-info">
 							<span style="font-size:16px;">Other Experience</span>
 							<span style="font-size:15px;" class="pull-right">
-								<a data-toggle="collapse" data-parent="#profile" href="#add-other-exp">
-									<i class="icon-edit"></i>
+								<a data-toggle="collapse" href="#add-other-exp">
+									<i class="icon-pencil"></i>&nbsp;Add
 								</a>
 							</span>
 						</div>
@@ -170,7 +184,7 @@
 						<div id="other_experience<%= p.id %>">
 							<h5>
 								<strong><%= p.name %></strong>
-								<a id="edit_link" data-toggle="collapse" data-parent="#profile" href="#other-experience-<%= p.id%>">
+								<a id="edit_link" data-toggle="collapse" href="#other-experience-<%= p.id%>">
 									<i class='icon-edit'></i>
 								</a>
 								<%= link_to('<i class="icon-trash"></i>'.html_safe, other_experience_path(s), :data => { :confirm => "Are you sure?" }, remote:true, :method => :delete, :class => 'btn') %>
