--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,10 @@
     <div style="min-height:400px;">
     <%= yield %>
     </div>
-    <%= render 'shared/footer' %>
-    <%= render 'shared/copyright' %>
+    <footer>
+      <%= render 'shared/footer' %>
+      <%= render 'shared/copyright' %>
+    </footer>
     <!--! end of #main -->
   </body>
 </html>
