--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -400,6 +400,11 @@ blockquote:hover {
 	background:#585f69;
 	color:#dadada;
 } 
+footer{
+	width: 100%;
+	bottom: 0px;
+	position: fixed;
+}
 .footer h1, 
 .footer h2, 
 .footer h3, 
