--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -403,7 +403,7 @@ blockquote:hover {
 footer{
 	width: 100%;
 	bottom: 0px;
-	position: fixed;
+	position: relative;
 }
 .footer h1, 
 .footer h2, 
